# spectre

./: .gitignore  Cargo.toml  README.md  example.toml  trace.json
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: builder.rs  core.rs  lib.rs  types.rs  utils.rs
crates/testnet/: Cargo.toml
crates/testnet/src/: lib.rs
examples/: full.toml  minimal.toml
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/tabs/: Accounts.tsx  Settings.tsx
spectre-cli/: Cargo.toml
spectre-gui/: package.json  pnpm-lock.yaml
spectre-gui/src/: App.tsx  main.tsx
spectre-gui/src-tauri/: Cargo.toml
spectre-gui/src/tabs/: Settings.tsx  Transactions.tsx
spectre-lib/: Cargo.toml  build.rs
spectre-lib/src/: core.rs  utils.rs
