[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# https://github.com/alloy-rs/alloy
alloy = { version = "0.11", default-features = false }
alloy-consensus = { version = "0.11", default-features = false }
alloy-eips = { version = "0.11", default-features = false }
alloy-json-rpc = { version = "0.11", default-features = false }
alloy-genesis = { version = "0.11", default-features = false }
alloy-network = { version = "0.11", default-features = false }
alloy-provider = { version = "0.11", default-features = false }
alloy-rpc-client = { version = "0.11", default-features = false }
alloy-rpc-types-eth = { version = "0.11", default-features = false }
alloy-serde = { version = "0.11", default-features = false }
alloy-signer = { version = "0.11", default-features = false }
alloy-signer-local = { version = "0.11", default-features = false }
alloy-transport = { version = "0.11", default-features = false }
# https://github.com/alloy-rs/rlp
alloy-rlp = { version = "0.3", default-features = false }
# https://github.com/alloy-rs/trie
alloy-trie = { version = "0.7", default-features = false }
# https://github.com/alloy-rs/core
alloy-primitives = { version = "0.8", default-features = false }

sbv-primitives = { git = "https://github.com/scroll-tech/stateless-block-verifier", branch = "feat/scanner" }
sbv-utils = { git = "https://github.com/scroll-tech/stateless-block-verifier", branch = "feat/scanner" }

scroll-alloy-consensus = { git = "https://github.com/scroll-tech/reth", branch = "zkvm/euclid-v2", default-features = false }
scroll-alloy-rpc-types = { git = "https://github.com/scroll-tech/reth", branch = "zkvm/euclid-v2", default-features = false }
scroll-alloy-network = { git = "https://github.com/scroll-tech/reth", branch = "zkvm/euclid-v2", default-features = false }

ctor = "0.4"
hex = "0.4"
rand = { version = "0.8", default-features = false }
serde_json = "1"
thiserror = "1"
toml = "0.8"
tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
url = "2.5"
