[package]
name = "spectre"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = "0.5"
alloy-eips = { version = "0.5", features = ["serde"] }
alloy-network = "0.5"
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-signer = "0.5"
alloy-signer-local = "0.5"
geth-utils = { git = "https://github.com/lightsing/geth-utils" }
hex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"

console = { version = "0.15", optional = true }

[features]
cli = ["dep:console"]

# future: use revm to generate trace
#[dependencies.sbv]
#git = "https://github.com/scroll-tech/stateless-block-verifier"
#branch = "master"
#
#[dependencies.revm]
#git = "https://github.com/scroll-tech/revm"
#branch = "scroll-evm-executor/v49"
#
#[patch.crates-io]
#ruint = { git = "https://github.com/scroll-tech/uint.git", branch = "v1.12.3" }
#
#alloy = { git = "https://github.com/scroll-tech/alloy.git", branch = "v0.5.4" }
#alloy-consensus = { git = "https://github.com/scroll-tech/alloy.git", branch = "v0.5.4" }
#alloy-eips = { git = "https://github.com/scroll-tech/alloy.git", branch = "v0.5.4" }
#alloy-serde = { git = "https://github.com/scroll-tech/alloy.git", branch = "v0.5.4" }
#alloy-signer = { git = "https://github.com/scroll-tech/alloy.git", branch = "v0.5.4" }
#alloy-signer-local = { git = "https://github.com/scroll-tech/alloy.git", branch = "v0.5.4" }
#
#alloy-eip2930 = { git = "https://github.com/scroll-tech/alloy-eips", branch = "v0.3.2" }
#alloy-eip7702 = { git = "https://github.com/scroll-tech/alloy-eips", branch = "v0.3.2" }
#
#alloy-core = { git = "https://github.com/scroll-tech/alloy-core", branch = "v0.8.10" }
#alloy-primitives = { git = "https://github.com/scroll-tech/alloy-core", branch = "v0.8.10" }
#alloy-sol-types = {git = "https://github.com/scroll-tech/alloy-core", branch = "v0.8.10" }