[package]
name = "spectre-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spectre"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15"
serde_json = "1"
toml = "0.8"
tokio = { workspace = true, features = ["full"] }

spectre = { path = "../core", features = ["cli"] }

[features]
scroll = ["spectre/scroll"]
