[package]
name = "testnet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-genesis.workspace = true
alloy-provider = { workspace = true, features = ["ipc"] }
alloy-serde.workspace = true
alloy-signer.workspace = true
alloy-transport.workspace = true
eth-keystore = { version = "0.5", features = ["geth-compat"] }
serde_json.workspace = true
tempfile = "3.19"
tracing.workspace = true
rand = "0.8"
sbv-primitives = { workspace = true, features = ["network-types"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }

[features]
scroll = [
    "sbv-primitives/scroll-network-types"
]
